add main structure html/css and first lines in js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- link FONTAWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <!-- link my CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -18,11 +21,37 @@
 <body>
 
     <header>
-        <h1 class="text-center py-4">Carousel Multi Array</h1>
+        <h1 class="text-center m-3">Carousel Multi Array</h1>
     </header>
 
     <main>
+        <section class="py-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-9 carousel_container">
+                        <div class="d-flex">
 
+                            <div class="big_image_container">
+
+                            </div>
+
+                            <div class="scroll_image_container">
+                                <div class="d-flex flex-column scroll_image">
+
+                                </div>
+                                <div class="butn butn_top">
+                                    <i class="fas fa-chevron-up"></i>
+                                </div>
+                                <div class="butn butn_bottom">
+                                    <i class="fas fa-chevron-down"></i>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
