add text scrolling in big img

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                             <div class="scroll_image_container">
                                 <div class="d-flex flex-column scroll_image">
-
+                                    <!-- Foto inserite tramite JavaScript -->
                                 </div>
                                 <div class="butn butn_top">
                                     <i class="fas fa-chevron-up"></i>
