add border on selected img

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <header>
-        <h1 class="text-center m-3">Carousel Multi Array</h1>
+        <h1 class="text-center m-5 text-light">Carousel Multi Array</h1>
     </header>
 
     <main>
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-10 carousel_container">
-                        <div class="d-flex">
+                        <div class="d-flex main_carousel">
 
                             <div class="big_image_container">
 
