use flex grow for img list

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="py-5">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-10 carousel_container">
+                    <div class="col-10">
                         <div class="d-flex main_carousel">
 
                             <div class="big_image_container">
